Pull chip8 rom from socket

--- a/esp32/.cargo/config.toml
+++ b/esp32/.cargo/config.toml
@@ -5,6 +5,7 @@ runner = "espflash --monitor"
 rustflags = [
   "-C", "link-arg=-Tlinkall.x",
   "-C", "link-arg=-nostartfiles",
+  "-C", "link-arg=-Trom_functions.x",
 ]
 
 target = "xtensa-esp32-none-elf"
