--- a/esp32/Cargo.toml
+++ b/esp32/Cargo.toml
@@ -1,12 +1,18 @@
 [package]
-name = "esp32"
+name = "udoo-esp32"
 version = "0.1.0"
 authors = ["Andrew Christiansen <andrewtaylorchristiansen@gmail.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-esp32-hal = "0.12.0"
+esp32-hal = { version = "0.12.0" } 
 esp-backtrace = { version = "0.7.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
-esp-println       = { version = "0.5.0", features = ["esp32"] }
+esp-println = { version = "0.5.0", features = ["esp32", "log"] }
+esp-wifi = { git = "https://github.com/esp-rs/esp-wifi/", rev = "44110b9dd3bce34b6d0936525d23840e472cdfb0", features = ["esp32", "wifi", "embedded-svc"] }
 critical-section = "1.1.1"
+embedded-svc = { version = "0.25.0", default-features = false, features = [] }
+log = "0.4.17"
+heapless = { version = "0.7.14", default-features = false }
+smoltcp = { version = "0.9.1", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
+embedded-io = "0.4.0"
