--- a/rp2040/Cargo.toml
+++ b/rp2040/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 cortex-m = "0.7"
 cortex-m-rt = "0.7"
 embedded-hal = { version = "0.2.5", features = ["unproven"] }
-chip8 = { path = "../../chip8" }
+#chip8 = { path = "../../chip8" }
+chip8 = { git = "https://github.com/drewtchrist/chip8" }
 
 defmt = "0.3"
 defmt-rtt = "0.4"
