--- a/esp32/Cargo.toml
+++ b/esp32/Cargo.toml
@@ -12,6 +12,7 @@ esp-println = { version = "0.5.0", features = ["esp32", "log"] }
 esp-wifi = { git = "https://github.com/esp-rs/esp-wifi/", rev = "44110b9dd3bce34b6d0936525d23840e472cdfb0", features = ["esp32", "wifi", "embedded-svc"] }
 critical-section = "1.1.1"
 embedded-svc = { version = "0.25.0", default-features = false, features = [] }
+embedded-hal = { version = "0.2", features=["unproven"] }
 log = "0.4.17"
 heapless = { version = "0.7.14", default-features = false }
 smoltcp = { version = "0.9.1", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
