--- a/rp2040/Cargo.toml
+++ b/rp2040/Cargo.toml
@@ -8,8 +8,7 @@ edition = "2021"
 cortex-m = "0.7"
 cortex-m-rt = "0.7"
 embedded-hal = { version = "0.2.5", features = ["unproven"] }
-#chip8 = { path = "../../chip8" }
-chip8 = { git = "https://github.com/drewtchrist/chip8" }
+chip8 = { git = "https://github.com/drewtchrist/chip8", branch = "develop" }
 
 defmt = "0.3"
 defmt-rtt = "0.4"
@@ -21,7 +20,8 @@ fugit = "0.3.6"
 panic-halt = "0.2.0"
 critical-section = "1.1.1"
 embedded-time = "0.12.1"
-embedded-graphics = "0.8.0"
+embedded-graphics = "0.8"
+#embedded-graphics-core = "0.4.0"
 nb = "1.1.0"
 
 # cargo build/run
